#
# Copyright 2018-2023 the Pacemaker project contributors
#
# The version control history for this file may have further details.
#
# This source code is licensed under the GNU General Public License version 2
# or later (GPLv2+) WITHOUT ANY WARRANTY.
#

MAINTAINERCLEANFILES	= Makefile.in
SUBDIRS			= based 	\
			  schedulerd 	\
			  attrd 	\
			  controld 	\
			  execd 	\
			  fenced 	\
			  pacemakerd
